--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
+  --font-sans: var(--font-courier-prime), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
+
+  --color-primary: #141414;
+  --color-secondary: #171717;
+  --color-heading: #ede6b4;
+  --color-text-main: #c2b97a;
+  --color-edge: #39372a;
+  }
